Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjUndefinedField.quorum
class Main
    Text v = undefined
    action Main
        Test(v)
    end

    action Test(Text var)
        if var = undefined
            output "passed"
        end
    end
end
