Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
